# Web-Scrapper-Project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  report.md  requirements.txt
src/web_scrapper/: api.py  crew.py  main.py  run_server.py
src/web_scrapper/config/: agents.yaml  tasks.yaml
