[project]
name = "web_scrapper"
version = "0.1.0"
description = "web_scrapper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
web_scrapper = "web_scrapper.main:run"
run_crew = "web_scrapper.main:run"
train = "web_scrapper.main:train"
replay = "web_scrapper.main:replay"
test = "web_scrapper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
